--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "sourceType": "module"
   },
   "rules": {
+    "@next/next/no-img-element": 0,
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "react/react-in-jsx-scope": "off",
