--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@next-auth/prisma-adapter": "^1.0.3",
-    "@prisma/client": "^3.13.0",
+    "@prisma/client": "^3.14.0",
     "@tailwindcss/forms": "^0.5.0",
     "@trpc/client": "^9.23.2",
     "@trpc/next": "^9.23.2",
@@ -47,6 +47,7 @@
     "next": "^12.1.6-canary.16",
     "next-auth": "^4.3.4",
     "nodemailer": "^6.7.4",
+    "password-meter": "^3.9.3",
     "postcss": "^8.4.13",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -72,7 +73,7 @@
     "lint-staged": ">=10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
-    "prisma": "^3.13.0",
+    "prisma": "^3.14.0",
     "ts-node": "^10.7.0",
     "typescript": "4.6.4"
   },
