--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "@heroicons/react": "^1.0.6",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.14.0",
-    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/forms": "^0.5.1",
     "@trpc/client": "^9.23.2",
     "@trpc/next": "^9.23.2",
     "@trpc/react": "^9.23.2",
     "@trpc/server": "^9.23.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/lodash": "^4.14.182",
-    "autoprefixer": "^10.4.5",
+    "autoprefixer": "^10.4.7",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.3.1",
@@ -46,31 +46,32 @@
     "lodash-es": "^4.17.21",
     "next": "^12.1.6-canary.16",
     "next-auth": "^4.3.4",
-    "nodemailer": "^6.7.4",
+    "node-fetch": "^2.6.7",
+    "nodemailer": "^6.7.5",
     "password-meter": "^3.9.3",
     "postcss": "^8.4.13",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-query": "^3.38.0",
-    "superjson": "^1.9.0",
+    "react-query": "^3.39.0",
+    "superjson": "^1.9.1",
     "tailwindcss": "^3.0.24",
-    "zod": "^3.14.4",
+    "zod": "^3.16.0",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^12.1.5",
-    "@types/node": "^17.0.30",
-    "@types/react": "^18.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
-    "eslint": "^8.14.0",
-    "eslint-config-next": "^12.1.5",
+    "@next/eslint-plugin-next": "^12.1.6",
+    "@types/node": "^17.0.33",
+    "@types/react": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "eslint": "^8.15.0",
+    "eslint-config-next": "^12.1.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "husky": ">=6",
-    "lint-staged": ">=10",
+    "husky": ">=8.0.1",
+    "lint-staged": ">=12.4.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
     "prisma": "^3.14.0",
