--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@next-auth/prisma-adapter": "^1.0.3",
-    "@prisma/client": "^3.14.0",
+    "@prisma/client": "^3.15.2",
     "@tailwindcss/forms": "^0.5.1",
+    "@tippyjs/react": "^4.2.6",
     "@trpc/client": "^9.23.2",
     "@trpc/next": "^9.23.2",
     "@trpc/react": "^9.23.2",
@@ -51,6 +52,7 @@
     "password-meter": "^3.9.3",
     "postcss": "^8.4.13",
     "react": "^18.1.0",
+    "react-country-flag": "^3.0.2",
     "react-dom": "^18.1.0",
     "react-query": "^3.39.0",
     "superjson": "^1.9.1",
@@ -64,6 +66,7 @@
     "@types/react": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
+    "add": "^2.0.6",
     "eslint": "^8.15.0",
     "eslint-config-next": "^12.1.6",
     "eslint-config-prettier": "^8.5.0",
@@ -74,9 +77,10 @@
     "lint-staged": ">=12.4.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
-    "prisma": "^3.14.0",
+    "prisma": "^3.15.2",
     "ts-node": "^10.7.0",
-    "typescript": "4.6.4"
+    "typescript": "4.6.4",
+    "yarn": "^1.22.19"
   },
   "publishConfig": {
     "access": "restricted"
