--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.15.2",
+    "@radix-ui/react-avatar": "^0.1.4",
     "@tailwindcss/forms": "^0.5.1",
     "@tippyjs/react": "^4.2.6",
     "@trpc/client": "^9.23.2",
