--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bcryptjs": "^2.4.3",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
+    "date-fns": "^2.28.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "next": "^12.1.6-canary.16",
