--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "node-fetch": "^2.6.7",
     "nodemailer": "^6.7.5",
     "password-meter": "^3.9.3",
+    "photoswipe": "^5.2.8",
     "postcss": "^8.4.13",
     "react": "^18.1.0",
     "react-country-flag": "^3.0.2",
     "react-dom": "^18.1.0",
+    "react-photoswipe-gallery": "^2.2.1",
     "react-query": "^3.39.0",
     "superjson": "^1.9.1",
     "tailwindcss": "^3.0.24",
