--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
-    "@next-auth/prisma-adapter": "^1.0.3",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^3.15.2",
     "@tailwindcss/forms": "^0.5.1",
     "@tippyjs/react": "^4.2.6",
@@ -45,8 +45,8 @@
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "next": "^12.1.6-canary.16",
-    "next-auth": "^4.3.4",
-    "node-fetch": "^2.6.7",
+    "next-auth": "4.18.8",
+    "node-fetch": "2.6.7",
     "nodemailer": "^6.7.5",
     "password-meter": "^3.9.3",
     "photoswipe": "^5.2.8",
